# quorvex_ai

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README.minimal.md  alembic.ini  demo.tape  docker-compose.dev-override.yml  docker-compose.minimal.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.swarm.yml  docker-compose.yml  mkdocs.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.freeze  setup.sh  start-ui.sh  supervisord.conf
orchestrator/: .env.example  __init__.py  cli.py  config.py  documentation-example-flow.md  load_env.py  logging_config.py  pyproject.toml  pytest.ini  requirements.txt  sdk_config.py  seed.spec.ts  test_e2e.py  test_load_validation.db-shm
orchestrator/agents/: auth_handler.py  base_agent.py  exploratory_agent.py  prerequisites_agent.py  spec_synthesis_agent.py  spec_writer_agent.py
orchestrator/api/: analytics.py  api_testing.py  auth.py  autopilot.py  chat.py  credentials.py  dashboard.py  database_testing.py  db.py  exploration.py  export_utils.py  github_ci.py  gitlab_ci.py  health.py  import_utils.py  jira.py  llm_testing.py  load_testing.py  main.py  memory.py  models.py  models_auth.py  models_db.py  pagination.py  prd.py  process_manager.py  projects.py  regression.py  requirements.py  rtm.py  scheduling.py  security.py  security_testing.py  settings.py  testrail.py  users.py
orchestrator/coverage/: __init__.py  playwright_coverage.py
orchestrator/memory/: __init__.py  config.py  embeddings.py  exploration_store.py  graph_store.py  manager.py  vector_store.py
orchestrator/migrations/: env.py
orchestrator/reporting/: report_generator.py
orchestrator/scripts/: cleanup_memory_projects.py  create_admin.py  demo_phase1_e2e.py  init_coverage_tables.py
orchestrator/services/: agent_queue.py  agent_worker.py  api_key_rotator.py  archival.py  batch_executor.py  browser_pool.py  github_client.py  gitlab_client.py  jira_client.py  job_queue.py  k6_queue.py  k6_worker.py  llm_provider.py  llm_spec_parser.py  load_test_lock.py  requirement_dedup.py  resource_manager.py  scheduler.py  storage.py  testrail_client.py
orchestrator/tests/: run_all_tests.py  seed.spec.ts  test_01_basic_query.py  test_02_file_access.py  test_03_mcp_access.py  test_04_subagent.py  test_05_explore_sites.py  test_05b_explore_with_perms.py  test_06_login_interaction.py  test_07_vague_targets.py  test_08_full_validation.py  test_09_memory_system.py  test_10_phase1_integration.py  test_api_endpoints.py  test_browser_pool.py  test_credentials.py  test_migrations.py  test_production_integration.py  test_production_security.py  test_requirement_dedup.py
orchestrator/utils/: __init__.py  agent_runner.py  ai_spec_splitter.py  api_endpoint_filter.py  browser_cleanup.py  json_utils.py  k6_result_parser.py  mcp_health.py  prd_spec_splitter.py  progress_reporter.py  project_utils.py  retry.py  skill_runner.py  spec_detector.py  spec_parser.py  string_utils.py  test_counter.py  test_results_parser.py
orchestrator/workflows/: api_edge_case_generator.py  api_spec_from_exploration.py  (+32 more)
(+352 files in other folders)
